[gd_scene load_steps=2 format=3 uid="uid://day_phase_ui"]

[ext_resource type="Script" path="res://Scripts/DayPhase.gd" id="1_day"]

[node name="DayPhase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_day")

[node name="ColorRect" type="ColorRect" parent=" சிற]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.18, 0.25, 1)

[node name="VBoxContainer" type="VBoxContainer" parent=" சிற]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Waiting for customer..."
horizontal_alignment = 1

[node name="OrderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ORDER: "
horizontal_alignment = 1

[node name="MixLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "YOUR MIX: "
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "\n[1]Tea [2]Milk [3]Syrup [4]Boba [5]Ice\n[Enter] Serve  [Backspace] Clear"
horizontal_alignment = 1
